syntax = "proto3";
package slinky.service.v1;

import "cosmos_sdk/cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "slinky/marketmap/v1/market.proto";

option go_package = "github.com/skip-mev/slinky/service/servers/oracle/types";

// Oracle defines the gRPC oracle service.
service Oracle {
  // Prices defines a method for fetching the latest prices.
  rpc Prices(QueryPricesRequest) returns (QueryPricesResponse) {
    option (google.api.http).get = "/slinky/oracle/v1/prices";
  }

  // MarketMap defines a method for fetching the latest market map
  // configuration.
  rpc MarketMap(QueryMarketMapRequest) returns (QueryMarketMapResponse) {
    option (google.api.http).get = "/slinky/oracle/v1/marketmap";
  }
}

// QueryPricesRequest defines the request type for the the Prices method.
message QueryPricesRequest {}

// QueryPricesResponse defines the response type for the Prices method.
message QueryPricesResponse {
  // prices defines the list of prices.
  map<string, string> prices = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// QueryMarketMapRequest defines the request type for the MarketMap method.
message QueryMarketMapRequest {}

// QueryMarketMapResponse defines the response type for the MarketMap method.
message QueryMarketMapResponse {
  // market_map defines the current market map configuration.
  slinky.marketmap.v1.MarketMap market_map = 1;
}
