syntax = "proto3";
package slinky.types.v1;

option go_package = "github.com/skip-mev/slinky/pkg/types";

// CurrencyPair is the standard representation of a pair of assets, where one
// (Base) is priced in terms of the other (Quote)
message CurrencyPair {
  string Base = 1;
  string Quote = 2;
}
